# CAN-FD_interface

./: .gitignore  CMakeLists.txt  README.md  app.overlay  platformio.ini  prj.conf
CAN-FD-interface/include/: can_interface.h  motor_controller.h
CAN-FD-interface/src/: can_interface.cpp  main.cpp  motor_controller.cpp
GRR_CAN/include/: grr_can.h
GRR_CAN/src/: main.cpp  motor_controller.cpp
GRR_CAN/zephyr/: prj.conf
config/: board_config.yaml
include/: bldc_motor_controller.h  board_builder.h  brushed_motor_controller.h  brushless_motor_controller.h  can_bootloader.h  can_interface.h  grr_can.h  knob_servo.h  mecanum_controller.h  motor_controller.h  servo_controller.h
platformio.old/: platformio.ini
python_manager/: python_manager.py  requirements.txt
scripts/: generate_board_config.py
src/: Arm.h  ColorSensor.h  LED.h  arm.cpp  bldc_motor_controller.cpp  board_builder.cpp  brushed_motor_controller.cpp  brushless_motor_controller.cpp  can_bootloader.cpp  can_interface.cpp  grr_can.cpp  knob_servo.cpp  main.cpp  mecanum_controller.cpp  motor_controller.cpp  servo_controller.cpp
src/IEEE_2026/: main.cpp
test/: test.cpp
test/12v_test/: 12v_test.ino
zephyr/: CMakeLists.txt  app.overlay  pr2j.conf  prj.conf  prj.conf.old
